Linked CSS file with reset and laid out wireframe.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="./index.css" rel="stylesheet" type="text/CSS">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Clare Jackson Codes</title>
 </head>
 <body>
+Clare Jackson
+
+Home
+About
+Contact
+Projects
+
+Clare Jackson
+
+My Projects
+
+<section>
+    <div class="projects-container">
+      <a><img src="#" alt="#"></a> 
+      <a><img src="#" alt="#"></a>
+      <a><img src="#" alt="#"></a>
+      <a><img src="#" alt="#"></a>
+      <a><img src="#" alt="#"></a>
+      <a><img src="#" alt="#"></a>
+    </div>
+</section>
+
+<footer>
+    Contact Me
+</footer>
+
+
     
 </body>
 </html>
