Close to finished with all CSS. Missing onclick attributes and Social Media links.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
 
     <header class="page-top">
-        <h1>Clare Jackson</h1>
+        <div class="top-name">
+            <h1>Clare Jackson</h1>
+        </div>
         <nav class="nav-bar">
-            <a href="./index.html">Home</a>
+            <a class="first-child" href="./index.html">Home</a>
             <a href="./about.html">About</a>
             <a href="./contact.html">Contact</a>
             <a href="./projects.html">Projects</a>
@@ -24,7 +26,7 @@
         <div class="header-nav">
             <h2>Clare Jackson</h2>
 
-            <button>My Projects</button>
+           <button onclick= "location.href=./projects.html">My Projects</button>
         
         </div>
     </section>
@@ -32,12 +34,30 @@
     <main>
         <section>
             <div class="projects-container">
-                <a><img src="https://images.unsplash.com/photo-1580787590149-0139609f5207?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=60" alt="#"></a>
-                <a><img src="https://images.unsplash.com/photo-1547394765-185e1e68f34e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=60" alt="#"></a>
-                <a><img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=60" alt="#"></a>
-                <a><img src="https://images.unsplash.com/photo-1524985069026-dd778a71c7b4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=60" alt="#"></a>
-                <a><img src="https://images.unsplash.com/photo-1559197062-a2b77865dc66?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=60" alt="#"></a>
-                <a><img src="https://images.unsplash.com/photo-1531494391841-6ac2ef3859b8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=60" alt="#"></a>
+                <div class="flex-images">
+                    <img src="https://images.unsplash.com/photo-1580787590149-0139609f5207?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=60" alt="sunshine through autumn leaves">
+                    <h3>I am the light.</h3>
+                </div>
+                <div class="flex-images">
+                    <img src="https://images.unsplash.com/photo-1547394765-185e1e68f34e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=60" alt="computer keyboard">
+                    <h3>Web Design is my gift of service.</h3>
+                </div> 
+                <div class="flex-images">
+                    <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=60" alt="waves washing up on the beach">
+                    <h3>The beach is so much fun!</h3>
+                </div> 
+                <div class="flex-images">
+                    <img src="https://images.unsplash.com/photo-1524985069026-dd778a71c7b4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=60" alt="movie theater screen view from the middle seat">
+                    <h3>I've always dreamed of being in a movie.</h3>
+                </div>
+                <div class="flex-images">
+                    <img src="https://images.unsplash.com/photo-1559197062-a2b77865dc66?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=60" alt="Buddha statue with hands in prayer">
+                    <h3>Meditation and Forgiveness move my life.</h3>
+                </div>
+                <div class="flex-images">
+                <a><img src="https://images.unsplash.com/photo-1531494391841-6ac2ef3859b8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=60" alt="view of hawk flying from below"></a>
+                <h3>I love birds, especially hawks.</h3>
+                </div>
             </div>
         </section>
     </main>
@@ -45,7 +65,7 @@
 
     <footer>
     
-        <button class="contact-me">Contact Me</button>
+        <button href="./contact.html">Contact Me</button>
     </footer>
 
 
