Added Twitter and LinkedIn buttons in footer without function.

--- a/index.html
+++ b/index.html
@@ -64,8 +64,11 @@
 
 
     <footer>
-    
+        <button type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer>LinkedIn</button>
+
         <button href="./contact.html">Contact Me</button>
+
+        <button type="text/javascript" src=https://twitter.com/ClareJa31828185">Twitter</button>
     </footer>
 
 
